Update 'awe9omzz1-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:002336529dafa2092b17f5700e3e170a48371a48@sha256:40ef37f92deb09ed0c11b159ff8a14e29227bfeaa23405cc1ef0f65dcc01b85d

--- a/components/awe9omzz1-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/awe9omzz1-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: awe9omzz1-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:002336529dafa2092b17f5700e3e170a48371a48@sha256:40ef37f92deb09ed0c11b159ff8a14e29227bfeaa23405cc1ef0f65dcc01b85d
+          name: container-image
